[tool.poetry]
name = "aldotai-tg"
version = "0.5"
description = ""
authors = ["kaixinol <keiplyer@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aldotai_tg"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.0"
aiogram = "^2.25.1"
loguru = "^0.6.0"
pyyaml = "^6.0"
aiohttp-socks = "^0.8.0"
pysocks = "^1.7.1"
schedule = "^1.1.0"
gameyamlspiderandgenerator = "^1.1.1"
sqlalchemy = "^2.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
