[tool.poetry]
name = "aldotai-tg"
version = "0.6.0"
description = ""
authors = ["kaixinol <keiplyer@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "aldotai_tg" }]

[tool.poetry.dependencies]
python = ">=3.11"
openai = "^0.27.0"
aiogram = "<3.0.0,>=2.0.0"
pyyaml = "^6.0"
aiohttp-socks = "^0.8.0"
pysocks = "^1.7.1"
schedule = "^1.1.0"
sqlalchemy = "^2.0.20"
gameyamlspiderandgenerator = ">=2.0.0, <3.0.0"
emoji = "^2.9.0"
aiohttp = ">=3.9.5, <4.0.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
